site: ledger rules sections, light updates

--- a/scalus-site/content/catalyst/multiplatform-1100198.mdx
+++ b/scalus-site/content/catalyst/multiplatform-1100198.mdx
@@ -6,8 +6,8 @@ sidebarTitle: 1100198 - Multiplatform support
 
 # Multiplatform Plutus Script Cost & Evaluation Library (JS/JVM/LLVM)
 
-IdeaScale
-Link: [https://cardano.ideascale.com/c/cardano/idea/111227](https://cardano.ideascale.com/c/cardano/idea/111227)
+Catalyst Project Link:
+https://projectcatalyst.io/funds/11/cardano-open-developers/multiplatform-plutus-script-cost-and-evaluation-library-jsjvmllvm
 
 Project Number: 1100198 
 
