--- a/scalus-site/content/smart-contract/index.mdx
+++ b/scalus-site/content/smart-contract/index.mdx
@@ -1,6 +1,6 @@
 ---
-#asIndexPage: true
-display: hidden
+asIndexPage: true
+#display: hidden
 ---
 import { Steps, Tabs } from 'nextra/components'
 
